unpackaged/main/default/objects/ET_Pricing_VAT_setup__c/ET_Pricing_VAT_setup__c.object-meta.xml
<CustomObject>
    <label>Vat Cost Master Setup</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Pricing VAT setup Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vat Cost Master Setup</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>