unpackaged/main/default/objects/ET_Pricing_VAT_setup__c/fields/ET_Cost_Api_Name__c.field-meta.xml
<CustomField>
    <fullName>ET_Cost_Api_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Cost Api Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>