unpackaged/main/default/objects/ET_Pricing_VAT_setup__c/fields/ET_Cost_Type__c.field-meta.xml
<CustomField>
    <fullName>ET_Cost_Type__c</fullName>
    <label>Cost Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Vehicle Direct</fullName>
            </value>
            <value>
                <fullName>Manpower</fullName>
            </value>
            <value>
                <fullName>Vehicle InDirect</fullName>
            </value>
            <value>
                <fullName>Vehicle</fullName>
                <isActive>false</isActive>
                <label>Vehicle</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>