unpackaged/main/default/objects/ET_Pricing_VAT_setup__c/fields/ET_IsRecoverable__c.field-meta.xml
<CustomField>
    <fullName>ET_IsRecoverable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsRecoverable</label>
    <type>Checkbox</type>
</CustomField>