unpackaged/main/default/objects/ET_Pricing_VAT_setup__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ET_Cost_Type__c</columns>
    <columns>ET_Cost_Api_Name__c</columns>
    <columns>ET_IsRecoverable__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>