unpackaged/main/default/objects/ET_Pricing_VAT_setup__c/listViews/Vehicle_Vat_Setups.listView-meta.xml
<ListView>
    <fullName>Vehicle_Vat_Setups</fullName>
    <columns>NAME</columns>
    <columns>ET_IsRecoverable__c</columns>
    <columns>ET_Cost_Type__c</columns>
    <columns>ET_Cost_Api_Name__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ET_Cost_Type__c</field>
        <operation>equals</operation>
        <value>Vehicle</value>
    </filters>
    <label>Vehicle Vat Setups</label>
</ListView>